--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             <!-- title -->
             <h3>Contact Information</h3>
             <!-- contact information-->
-            <ul>
+            <ul> class-""
                 <li><a href="tel:1234567890">(123) 456-7890</a></li>
                 <li><a href="mailto:user@email.com">user@email.com</a></li>
                 <li><a href="https://twitter.com" target="_blank">@username</a></li>
